--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.api</groupId>
-	<artifactId>GithubApi</artifactId>
+	<artifactId>githubApi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>GithubApi</name>
 	<description>Demo project for Spring Boot</description>
