Efficiency improve and fix bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.cloud.openfeign.client.config.repository.url=https://api.github.com/users
 spring.cloud.openfeign.client.config.repository.connect-timeout=5000
 spring.cloud.openfeign.client.config.repository.read-timeout=5000
 spring.cloud.openfeign.client.config.repository.logger-level=full
+
+github.api.token=change_me
