--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.cloud.openfeign.client.config.repository.connect-timeout=5000
 spring.cloud.openfeign.client.config.repository.read-timeout=5000
 spring.cloud.openfeign.client.config.repository.logger-level=full
 
-github.api.token=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
+github.api.token=change_me
