--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.cloud.openfeign.client.config.repository.connect-timeout=5000
 spring.cloud.openfeign.client.config.repository.read-timeout=5000
 spring.cloud.openfeign.client.config.repository.logger-level=full
 
-github.api.token=change_me
+github.api.token=change__me
